fix: [FIX] bug of box on mobile size

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -83,7 +83,7 @@
             }
 
             .box:nth-child(3) {
-                @apply -mt-16 lg:-mt-4;
+                @apply -mt-4;
             }
             .box:nth-child(4) {
                 @apply mt-6;
